// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TopCountriesRealtime when data is loaded and a country with name "" exists renders a component with data loaded 1`] = `
<DocumentFragment>
  <div>
    <div
      class="chart__title padding-top-2 desktop:padding-top-0"
    >
      <a
        href="/definitions#dimension_country"
      >
        Countries
      </a>
    </div>
    <figure
      id="chart_us"
    >
      <div
        class="data chart__bar-chart text--capitalize margin-top-4"
      >
        <div
          class="chart__bar-chart__item"
        >
          <div
            class="chart__bar-chart__item__label dark-grey text--overflow-ellipsis margin-right-8"
          >
            International
          </div>
          <div
            class="chart__bar-chart__item__value"
          >
            100%
          </div>
          <div
            class="chart__bar-chart__item__bar bg-light-blue"
            style="width: 100%;"
          />
          <figure
            class="chart__bar-chart__nested"
            id="chart_countries"
          >
            <div
              class="data chart__bar-chart text--capitalize margin-top-4"
            >
              <div
                class="chart__bar-chart__item"
                data-share="9.698050008324927"
              >
                <div
                  class="chart__bar-chart__item__label dark-grey text--overflow-ellipsis margin-right-8"
                >
                  Saint Vincent and the Grenadines
                </div>
                <div
                  class="chart__bar-chart__item__value"
                >
                  9.7%
                </div>
                <div
                  class="chart__bar-chart__item__bar bg-light-blue"
                  style="width: 10%;"
                />
              </div>
              <div
                class="chart__bar-chart__item"
                data-share="9.323918004368139"
              >
                <div
                  class="chart__bar-chart__item__label dark-grey text--overflow-ellipsis margin-right-8"
                >
                  Slovakia
                </div>
                <div
                  class="chart__bar-chart__item__value"
                >
                  9.3%
                </div>
                <div
                  class="chart__bar-chart__item__bar bg-light-blue"
                  style="width: 9%;"
                />
              </div>
              <div
                class="chart__bar-chart__item"
                data-share="8.973291676052614"
              >
                <div
                  class="chart__bar-chart__item__label dark-grey text--overflow-ellipsis margin-right-8"
                >
                  Unknown
                </div>
                <div
                  class="chart__bar-chart__item__value"
                >
                  9%
                </div>
                <div
                  class="chart__bar-chart__item__bar bg-light-blue"
                  style="width: 9%;"
                />
              </div>
              <div
                class="chart__bar-chart__item"
                data-share="7.841101632665054"
              >
                <div
                  class="chart__bar-chart__item__label dark-grey text--overflow-ellipsis margin-right-8"
                >
                  Curacao
                </div>
                <div
                  class="chart__bar-chart__item__value"
                >
                  7.8%
                </div>
                <div
                  class="chart__bar-chart__item__bar bg-light-blue"
                  style="width: 8%;"
                />
              </div>
              <div
                class="chart__bar-chart__item"
                data-share="7.367070507232892"
              >
                <div
                  class="chart__bar-chart__item__label dark-grey text--overflow-ellipsis margin-right-8"
                >
                  Portugal
                </div>
                <div
                  class="chart__bar-chart__item__value"
                >
                  7.4%
                </div>
                <div
                  class="chart__bar-chart__item__bar bg-light-blue"
                  style="width: 7%;"
                />
              </div>
              <div
                class="chart__bar-chart__item"
                data-share="7.112425687785863"
              >
                <div
                  class="chart__bar-chart__item__label dark-grey text--overflow-ellipsis margin-right-8"
                >
                  Sudan
                </div>
                <div
                  class="chart__bar-chart__item__value"
                >
                  7.1%
                </div>
                <div
                  class="chart__bar-chart__item__bar bg-light-blue"
                  style="width: 7%;"
                />
              </div>
              <div
                class="chart__bar-chart__item"
                data-share="6.5492688755472415"
              >
                <div
                  class="chart__bar-chart__item__label dark-grey text--overflow-ellipsis margin-right-8"
                >
                  French Polynesia
                </div>
                <div
                  class="chart__bar-chart__item__value"
                >
                  6.5%
                </div>
                <div
                  class="chart__bar-chart__item__bar bg-light-blue"
                  style="width: 7%;"
                />
              </div>
              <div
                class="chart__bar-chart__item"
                data-share="6.335758988472424"
              >
                <div
                  class="chart__bar-chart__item__label dark-grey text--overflow-ellipsis margin-right-8"
                >
                  Montenegro
                </div>
                <div
                  class="chart__bar-chart__item__value"
                >
                  6.3%
                </div>
                <div
                  class="chart__bar-chart__item__bar bg-light-blue"
                  style="width: 6%;"
                />
              </div>
              <div
                class="chart__bar-chart__item"
                data-share="5.262333134188026"
              >
                <div
                  class="chart__bar-chart__item__label dark-grey text--overflow-ellipsis margin-right-8"
                >
                  Bahrain
                </div>
                <div
                  class="chart__bar-chart__item__value"
                >
                  5.3%
                </div>
                <div
                  class="chart__bar-chart__item__bar bg-light-blue"
                  style="width: 5%;"
                />
              </div>
              <div
                class="chart__bar-chart__item"
                data-share="5.183980882050478"
              >
                <div
                  class="chart__bar-chart__item__label dark-grey text--overflow-ellipsis margin-right-8"
                >
                  Cocos (Keeling) Islands
                </div>
                <div
                  class="chart__bar-chart__item__value"
                >
                  5.2%
                </div>
                <div
                  class="chart__bar-chart__item__bar bg-light-blue"
                  style="width: 5%;"
                />
              </div>
              <div
                class="chart__bar-chart__item"
                data-share="5.117381467733563"
              >
                <div
                  class="chart__bar-chart__item__label dark-grey text--overflow-ellipsis margin-right-8"
                >
                  Eritrea
                </div>
                <div
                  class="chart__bar-chart__item__value"
                >
                  5.1%
                </div>
                <div
                  class="chart__bar-chart__item__bar bg-light-blue"
                  style="width: 5%;"
                />
              </div>
              <div
                class="chart__bar-chart__item"
                data-share="5.101711017306053"
              >
                <div
                  class="chart__bar-chart__item__label dark-grey text--overflow-ellipsis margin-right-8"
                >
                  Sao Tome and Principe
                </div>
                <div
                  class="chart__bar-chart__item__value"
                >
                  5.1%
                </div>
                <div
                  class="chart__bar-chart__item__bar bg-light-blue"
                  style="width: 5%;"
                />
              </div>
              <div
                class="chart__bar-chart__item"
                data-share="4.595359587867154"
              >
                <div
                  class="chart__bar-chart__item__label dark-grey text--overflow-ellipsis margin-right-8"
                >
                  Jersey
                </div>
                <div
                  class="chart__bar-chart__item__value"
                >
                  4.6%
                </div>
                <div
                  class="chart__bar-chart__item__bar bg-light-blue"
                  style="width: 5%;"
                />
              </div>
              <div
                class="chart__bar-chart__item"
                data-share="4.460201952929885"
              >
                <div
                  class="chart__bar-chart__item__label dark-grey text--overflow-ellipsis margin-right-8"
                >
                  Sweden
                </div>
                <div
                  class="chart__bar-chart__item__value"
                >
                  4.5%
                </div>
                <div
                  class="chart__bar-chart__item__bar bg-light-blue"
                  style="width: 4%;"
                />
              </div>
              <div
                class="chart__bar-chart__item"
                data-share="7.078146577475687"
              >
                <div
                  class="chart__bar-chart__item__label dark-grey text--overflow-ellipsis margin-right-8"
                >
                  Other
                </div>
                <div
                  class="chart__bar-chart__item__value"
                >
                  7.1%
                </div>
                <div
                  class="chart__bar-chart__item__bar bg-light-blue"
                  style="width: 7%;"
                />
              </div>
            </div>
          </figure>
        </div>
      </div>
    </figure>
    <figure
      class="hide chart__bar-chart__nested"
      id="chart_us_and_territories"
    >
      <div
        class="data chart__bar-chart text--capitalize margin-top-4"
      />
    </figure>
  </div>
</DocumentFragment>
`;

exports[`TopCountriesRealtime when data is loaded and a country with name null exists renders a component with data loaded 1`] = `
<DocumentFragment>
  <div>
    <div
      class="chart__title padding-top-2 desktop:padding-top-0"
    >
      <a
        href="/definitions#dimension_country"
      >
        Countries
      </a>
    </div>
    <figure
      id="chart_us"
    >
      <div
        class="data chart__bar-chart text--capitalize margin-top-4"
      >
        <div
          class="chart__bar-chart__item"
        >
          <div
            class="chart__bar-chart__item__label dark-grey text--overflow-ellipsis margin-right-8"
          >
            International
          </div>
          <div
            class="chart__bar-chart__item__value"
          >
            100%
          </div>
          <div
            class="chart__bar-chart__item__bar bg-light-blue"
            style="width: 100%;"
          />
          <figure
            class="chart__bar-chart__nested"
            id="chart_countries"
          >
            <div
              class="data chart__bar-chart text--capitalize margin-top-4"
            >
              <div
                class="chart__bar-chart__item"
                data-share="10.14626670573122"
              >
                <div
                  class="chart__bar-chart__item__label dark-grey text--overflow-ellipsis margin-right-8"
                >
                  Brunei Darussalam
                </div>
                <div
                  class="chart__bar-chart__item__value"
                >
                  10.1%
                </div>
                <div
                  class="chart__bar-chart__item__bar bg-light-blue"
                  style="width: 10%;"
                />
              </div>
              <div
                class="chart__bar-chart__item"
                data-share="9.323657343760566"
              >
                <div
                  class="chart__bar-chart__item__label dark-grey text--overflow-ellipsis margin-right-8"
                >
                  Monaco
                </div>
                <div
                  class="chart__bar-chart__item__value"
                >
                  9.3%
                </div>
                <div
                  class="chart__bar-chart__item__bar bg-light-blue"
                  style="width: 9%;"
                />
              </div>
              <div
                class="chart__bar-chart__item"
                data-share="9.039688084559735"
              >
                <div
                  class="chart__bar-chart__item__label dark-grey text--overflow-ellipsis margin-right-8"
                >
                  India
                </div>
                <div
                  class="chart__bar-chart__item__value"
                >
                  9%
                </div>
                <div
                  class="chart__bar-chart__item__bar bg-light-blue"
                  style="width: 9%;"
                />
              </div>
              <div
                class="chart__bar-chart__item"
                data-share="7.4451781569042845"
              >
                <div
                  class="chart__bar-chart__item__label dark-grey text--overflow-ellipsis margin-right-8"
                >
                  Democratic Republic of the Congo
                </div>
                <div
                  class="chart__bar-chart__item__value"
                >
                  7.4%
                </div>
                <div
                  class="chart__bar-chart__item__bar bg-light-blue"
                  style="width: 7%;"
                />
              </div>
              <div
                class="chart__bar-chart__item"
                data-share="7.1848730026368575"
              >
                <div
                  class="chart__bar-chart__item__label dark-grey text--overflow-ellipsis margin-right-8"
                >
                  Unknown
                </div>
                <div
                  class="chart__bar-chart__item__value"
                >
                  7.2%
                </div>
                <div
                  class="chart__bar-chart__item__bar bg-light-blue"
                  style="width: 7%;"
                />
              </div>
              <div
                class="chart__bar-chart__item"
                data-share="7.0642987536904736"
              >
                <div
                  class="chart__bar-chart__item__label dark-grey text--overflow-ellipsis margin-right-8"
                >
                  French Southern Territories
                </div>
                <div
                  class="chart__bar-chart__item__value"
                >
                  7.1%
                </div>
                <div
                  class="chart__bar-chart__item__bar bg-light-blue"
                  style="width: 7%;"
                />
              </div>
              <div
                class="chart__bar-chart__item"
                data-share="6.18421942259584"
              >
                <div
                  class="chart__bar-chart__item__label dark-grey text--overflow-ellipsis margin-right-8"
                >
                  Guinea-Bissau
                </div>
                <div
                  class="chart__bar-chart__item__value"
                >
                  6.2%
                </div>
                <div
                  class="chart__bar-chart__item__bar bg-light-blue"
                  style="width: 6%;"
                />
              </div>
              <div
                class="chart__bar-chart__item"
                data-share="5.919406819769669"
              >
                <div
                  class="chart__bar-chart__item__label dark-grey text--overflow-ellipsis margin-right-8"
                >
                  Grenada
                </div>
                <div
                  class="chart__bar-chart__item__value"
                >
                  5.9%
                </div>
                <div
                  class="chart__bar-chart__item__bar bg-light-blue"
                  style="width: 6%;"
                />
              </div>
              <div
                class="chart__bar-chart__item"
                data-share="5.314281850758378"
              >
                <div
                  class="chart__bar-chart__item__label dark-grey text--overflow-ellipsis margin-right-8"
                >
                  Monaco
                </div>
                <div
                  class="chart__bar-chart__item__value"
                >
                  5.3%
                </div>
                <div
                  class="chart__bar-chart__item__bar bg-light-blue"
                  style="width: 5%;"
                />
              </div>
              <div
                class="chart__bar-chart__item"
                data-share="4.988618692389173"
              >
                <div
                  class="chart__bar-chart__item__label dark-grey text--overflow-ellipsis margin-right-8"
                >
                  Russian Federation
                </div>
                <div
                  class="chart__bar-chart__item__value"
                >
                  5%
                </div>
                <div
                  class="chart__bar-chart__item__bar bg-light-blue"
                  style="width: 5%;"
                />
              </div>
              <div
                class="chart__bar-chart__item"
                data-share="4.845507200649073"
              >
                <div
                  class="chart__bar-chart__item__label dark-grey text--overflow-ellipsis margin-right-8"
                >
                  Jersey
                </div>
                <div
                  class="chart__bar-chart__item__value"
                >
                  4.8%
                </div>
                <div
                  class="chart__bar-chart__item__bar bg-light-blue"
                  style="width: 5%;"
                />
              </div>
              <div
                class="chart__bar-chart__item"
                data-share="4.566045390006987"
              >
                <div
                  class="chart__bar-chart__item__label dark-grey text--overflow-ellipsis margin-right-8"
                >
                  Iceland
                </div>
                <div
                  class="chart__bar-chart__item__value"
                >
                  4.6%
                </div>
                <div
                  class="chart__bar-chart__item__bar bg-light-blue"
                  style="width: 5%;"
                />
              </div>
              <div
                class="chart__bar-chart__item"
                data-share="4.160375019720088"
              >
                <div
                  class="chart__bar-chart__item__label dark-grey text--overflow-ellipsis margin-right-8"
                >
                  Guinea
                </div>
                <div
                  class="chart__bar-chart__item__value"
                >
                  4.2%
                </div>
                <div
                  class="chart__bar-chart__item__bar bg-light-blue"
                  style="width: 4%;"
                />
              </div>
              <div
                class="chart__bar-chart__item"
                data-share="3.804286583579365"
              >
                <div
                  class="chart__bar-chart__item__label dark-grey text--overflow-ellipsis margin-right-8"
                >
                  United States Minor Outlying Islands
                </div>
                <div
                  class="chart__bar-chart__item__value"
                >
                  3.8%
                </div>
                <div
                  class="chart__bar-chart__item__bar bg-light-blue"
                  style="width: 4%;"
                />
              </div>
              <div
                class="chart__bar-chart__item"
                data-share="10.013296973248293"
              >
                <div
                  class="chart__bar-chart__item__label dark-grey text--overflow-ellipsis margin-right-8"
                >
                  Other
                </div>
                <div
                  class="chart__bar-chart__item__value"
                >
                  10%
                </div>
                <div
                  class="chart__bar-chart__item__bar bg-light-blue"
                  style="width: 10%;"
                />
              </div>
            </div>
          </figure>
        </div>
      </div>
    </figure>
    <figure
      class="hide chart__bar-chart__nested"
      id="chart_us_and_territories"
    >
      <div
        class="data chart__bar-chart text--capitalize margin-top-4"
      />
    </figure>
  </div>
</DocumentFragment>
`;

exports[`TopCountriesRealtime when data is loaded and a country with name undefined exists renders a component with data loaded 1`] = `
<DocumentFragment>
  <div>
    <div
      class="chart__title padding-top-2 desktop:padding-top-0"
    >
      <a
        href="/definitions#dimension_country"
      >
        Countries
      </a>
    </div>
    <figure
      id="chart_us"
    >
      <div
        class="data chart__bar-chart text--capitalize margin-top-4"
      >
        <div
          class="chart__bar-chart__item"
        >
          <div
            class="chart__bar-chart__item__label dark-grey text--overflow-ellipsis margin-right-8"
          >
            International
          </div>
          <div
            class="chart__bar-chart__item__value"
          >
            88.7%
          </div>
          <div
            class="chart__bar-chart__item__bar bg-light-blue"
            style="width: 89%;"
          />
          <figure
            class="chart__bar-chart__nested"
            id="chart_countries"
          >
            <div
              class="data chart__bar-chart text--capitalize margin-top-4"
            >
              <div
                class="chart__bar-chart__item"
                data-share="9.354646504078405"
              >
                <div
                  class="chart__bar-chart__item__label dark-grey text--overflow-ellipsis margin-right-8"
                >
                  Zimbabwe
                </div>
                <div
                  class="chart__bar-chart__item__value"
                >
                  9.4%
                </div>
                <div
                  class="chart__bar-chart__item__bar bg-light-blue"
                  style="width: 9%;"
                />
              </div>
              <div
                class="chart__bar-chart__item"
                data-share="9.221096751659099"
              >
                <div
                  class="chart__bar-chart__item__label dark-grey text--overflow-ellipsis margin-right-8"
                >
                  Malawi
                </div>
                <div
                  class="chart__bar-chart__item__value"
                >
                  9.2%
                </div>
                <div
                  class="chart__bar-chart__item__bar bg-light-blue"
                  style="width: 9%;"
                />
              </div>
              <div
                class="chart__bar-chart__item"
                data-share="7.903063425859341"
              >
                <div
                  class="chart__bar-chart__item__label dark-grey text--overflow-ellipsis margin-right-8"
                >
                  Kenya
                </div>
                <div
                  class="chart__bar-chart__item__value"
                >
                  7.9%
                </div>
                <div
                  class="chart__bar-chart__item__bar bg-light-blue"
                  style="width: 8%;"
                />
              </div>
              <div
                class="chart__bar-chart__item"
                data-share="7.729448747714245"
              >
                <div
                  class="chart__bar-chart__item__label dark-grey text--overflow-ellipsis margin-right-8"
                >
                  Jordan
                </div>
                <div
                  class="chart__bar-chart__item__value"
                >
                  7.7%
                </div>
                <div
                  class="chart__bar-chart__item__bar bg-light-blue"
                  style="width: 8%;"
                />
              </div>
              <div
                class="chart__bar-chart__item"
                data-share="7.538369871175854"
              >
                <div
                  class="chart__bar-chart__item__label dark-grey text--overflow-ellipsis margin-right-8"
                >
                  Lesotho
                </div>
                <div
                  class="chart__bar-chart__item__value"
                >
                  7.5%
                </div>
                <div
                  class="chart__bar-chart__item__bar bg-light-blue"
                  style="width: 8%;"
                />
              </div>
              <div
                class="chart__bar-chart__item"
                data-share="6.919931786895687"
              >
                <div
                  class="chart__bar-chart__item__label dark-grey text--overflow-ellipsis margin-right-8"
                >
                  Sierra Leone
                </div>
                <div
                  class="chart__bar-chart__item__value"
                >
                  6.9%
                </div>
                <div
                  class="chart__bar-chart__item__bar bg-light-blue"
                  style="width: 7%;"
                />
              </div>
              <div
                class="chart__bar-chart__item"
                data-share="6.572702430605494"
              >
                <div
                  class="chart__bar-chart__item__label dark-grey text--overflow-ellipsis margin-right-8"
                >
                  Norway
                </div>
                <div
                  class="chart__bar-chart__item__value"
                >
                  6.6%
                </div>
                <div
                  class="chart__bar-chart__item__bar bg-light-blue"
                  style="width: 7%;"
                />
              </div>
              <div
                class="chart__bar-chart__item"
                data-share="6.399087752460398"
              >
                <div
                  class="chart__bar-chart__item__label dark-grey text--overflow-ellipsis margin-right-8"
                >
                  Turkey
                </div>
                <div
                  class="chart__bar-chart__item__value"
                >
                  6.4%
                </div>
                <div
                  class="chart__bar-chart__item__bar bg-light-blue"
                  style="width: 6%;"
                />
              </div>
              <div
                class="chart__bar-chart__item"
                data-share="5.74263935403012"
              >
                <div
                  class="chart__bar-chart__item__label dark-grey text--overflow-ellipsis margin-right-8"
                >
                  India
                </div>
                <div
                  class="chart__bar-chart__item__value"
                >
                  5.7%
                </div>
                <div
                  class="chart__bar-chart__item__bar bg-light-blue"
                  style="width: 6%;"
                />
              </div>
              <div
                class="chart__bar-chart__item"
                data-share="5.399519220891291"
              >
                <div
                  class="chart__bar-chart__item__label dark-grey text--overflow-ellipsis margin-right-8"
                >
                  Grenada
                </div>
                <div
                  class="chart__bar-chart__item__value"
                >
                  5.4%
                </div>
                <div
                  class="chart__bar-chart__item__bar bg-light-blue"
                  style="width: 5%;"
                />
              </div>
              <div
                class="chart__bar-chart__item"
                data-share="4.113332374514598"
              >
                <div
                  class="chart__bar-chart__item__label dark-grey text--overflow-ellipsis margin-right-8"
                >
                  Chad
                </div>
                <div
                  class="chart__bar-chart__item__value"
                >
                  4.1%
                </div>
                <div
                  class="chart__bar-chart__item__bar bg-light-blue"
                  style="width: 4%;"
                />
              </div>
              <div
                class="chart__bar-chart__item"
                data-share="3.5205769349304514"
              >
                <div
                  class="chart__bar-chart__item__label dark-grey text--overflow-ellipsis margin-right-8"
                >
                  Unknown
                </div>
                <div
                  class="chart__bar-chart__item__value"
                >
                  3.5%
                </div>
                <div
                  class="chart__bar-chart__item__bar bg-light-blue"
                  style="width: 4%;"
                />
              </div>
              <div
                class="chart__bar-chart__item"
                data-share="2.0114647325923034"
              >
                <div
                  class="chart__bar-chart__item__label dark-grey text--overflow-ellipsis margin-right-8"
                >
                  Poland
                </div>
                <div
                  class="chart__bar-chart__item__value"
                >
                  2%
                </div>
                <div
                  class="chart__bar-chart__item__bar bg-light-blue"
                  style="width: 2%;"
                />
              </div>
              <div
                class="chart__bar-chart__item"
                data-share="1.8820242033243613"
              >
                <div
                  class="chart__bar-chart__item__label dark-grey text--overflow-ellipsis margin-right-8"
                >
                  North Macedonia
                </div>
                <div
                  class="chart__bar-chart__item__value"
                >
                  1.9%
                </div>
                <div
                  class="chart__bar-chart__item__bar bg-light-blue"
                  style="width: 2%;"
                />
              </div>
              <div
                class="chart__bar-chart__item"
                data-share="4.434879086108771"
              >
                <div
                  class="chart__bar-chart__item__label dark-grey text--overflow-ellipsis margin-right-8"
                >
                  Other
                </div>
                <div
                  class="chart__bar-chart__item__value"
                >
                  4.4%
                </div>
                <div
                  class="chart__bar-chart__item__bar bg-light-blue"
                  style="width: 4%;"
                />
              </div>
            </div>
          </figure>
        </div>
        <div
          class="chart__bar-chart__item"
        >
          <div
            class="chart__bar-chart__item__label dark-grey text--overflow-ellipsis margin-right-8"
          >
            United States & Territories
          </div>
          <div
            class="chart__bar-chart__item__value"
          >
            11.3%
          </div>
          <div
            class="chart__bar-chart__item__bar bg-light-blue"
            style="width: 11%;"
          />
          <figure
            class="chart__bar-chart__nested"
            id="chart_us_and_territories"
          >
            <div
              class="data chart__bar-chart text--capitalize margin-top-4"
            >
              <div
                class="chart__bar-chart__item"
                data-share="10.180600357502415"
              >
                <div
                  class="chart__bar-chart__item__label dark-grey text--overflow-ellipsis margin-right-8"
                >
                  American Samoa
                </div>
                <div
                  class="chart__bar-chart__item__value"
                >
                  10.2%
                </div>
                <div
                  class="chart__bar-chart__item__bar bg-light-blue"
                  style="width: 10%;"
                />
              </div>
              <div
                class="chart__bar-chart__item"
                data-share="1.0766164656571675"
              >
                <div
                  class="chart__bar-chart__item__label dark-grey text--overflow-ellipsis margin-right-8"
                >
                  Puerto Rico
                </div>
                <div
                  class="chart__bar-chart__item__value"
                >
                  1.1%
                </div>
                <div
                  class="chart__bar-chart__item__bar bg-light-blue"
                  style="width: 1%;"
                />
              </div>
            </div>
          </figure>
        </div>
      </div>
    </figure>
  </div>
</DocumentFragment>
`;

exports[`TopCountriesRealtime when data is loaded and all country names are valid renders a component with data loaded 1`] = `
<DocumentFragment>
  <div>
    <div
      class="chart__title padding-top-2 desktop:padding-top-0"
    >
      <a
        href="/definitions#dimension_country"
      >
        Countries
      </a>
    </div>
    <figure
      id="chart_us"
    >
      <div
        class="data chart__bar-chart text--capitalize margin-top-4"
      >
        <div
          class="chart__bar-chart__item"
        >
          <div
            class="chart__bar-chart__item__label dark-grey text--overflow-ellipsis margin-right-8"
          >
            International
          </div>
          <div
            class="chart__bar-chart__item__value"
          >
            93.5%
          </div>
          <div
            class="chart__bar-chart__item__bar bg-light-blue"
            style="width: 94%;"
          />
          <figure
            class="chart__bar-chart__nested"
            id="chart_countries"
          >
            <div
              class="data chart__bar-chart text--capitalize margin-top-4"
            >
              <div
                class="chart__bar-chart__item"
                data-share="10.50710035323961"
              >
                <div
                  class="chart__bar-chart__item__label dark-grey text--overflow-ellipsis margin-right-8"
                >
                  Cuba
                </div>
                <div
                  class="chart__bar-chart__item__value"
                >
                  10.5%
                </div>
                <div
                  class="chart__bar-chart__item__bar bg-light-blue"
                  style="width: 11%;"
                />
              </div>
              <div
                class="chart__bar-chart__item"
                data-share="8.976790498091558"
              >
                <div
                  class="chart__bar-chart__item__label dark-grey text--overflow-ellipsis margin-right-8"
                >
                  Bahamas
                </div>
                <div
                  class="chart__bar-chart__item__value"
                >
                  9%
                </div>
                <div
                  class="chart__bar-chart__item__bar bg-light-blue"
                  style="width: 9%;"
                />
              </div>
              <div
                class="chart__bar-chart__item"
                data-share="8.840473198833598"
              >
                <div
                  class="chart__bar-chart__item__label dark-grey text--overflow-ellipsis margin-right-8"
                >
                  New Zealand
                </div>
                <div
                  class="chart__bar-chart__item__value"
                >
                  8.8%
                </div>
                <div
                  class="chart__bar-chart__item__bar bg-light-blue"
                  style="width: 9%;"
                />
              </div>
              <div
                class="chart__bar-chart__item"
                data-share="8.047462127498163"
              >
                <div
                  class="chart__bar-chart__item__label dark-grey text--overflow-ellipsis margin-right-8"
                >
                  Finland
                </div>
                <div
                  class="chart__bar-chart__item__value"
                >
                  8%
                </div>
                <div
                  class="chart__bar-chart__item__bar bg-light-blue"
                  style="width: 8%;"
                />
              </div>
              <div
                class="chart__bar-chart__item"
                data-share="7.768900689884071"
              >
                <div
                  class="chart__bar-chart__item__label dark-grey text--overflow-ellipsis margin-right-8"
                >
                  Slovenia
                </div>
                <div
                  class="chart__bar-chart__item__value"
                >
                  7.8%
                </div>
                <div
                  class="chart__bar-chart__item__bar bg-light-blue"
                  style="width: 8%;"
                />
              </div>
              <div
                class="chart__bar-chart__item"
                data-share="6.73644531898248"
              >
                <div
                  class="chart__bar-chart__item__label dark-grey text--overflow-ellipsis margin-right-8"
                >
                  Cameroon
                </div>
                <div
                  class="chart__bar-chart__item__value"
                >
                  6.7%
                </div>
                <div
                  class="chart__bar-chart__item__bar bg-light-blue"
                  style="width: 7%;"
                />
              </div>
              <div
                class="chart__bar-chart__item"
                data-share="6.687845238377468"
              >
                <div
                  class="chart__bar-chart__item__label dark-grey text--overflow-ellipsis margin-right-8"
                >
                  Costa Rica
                </div>
                <div
                  class="chart__bar-chart__item__value"
                >
                  6.7%
                </div>
                <div
                  class="chart__bar-chart__item__bar bg-light-blue"
                  style="width: 7%;"
                />
              </div>
              <div
                class="chart__bar-chart__item"
                data-share="6.377278869633248"
              >
                <div
                  class="chart__bar-chart__item__label dark-grey text--overflow-ellipsis margin-right-8"
                >
                  Chile
                </div>
                <div
                  class="chart__bar-chart__item__value"
                >
                  6.4%
                </div>
                <div
                  class="chart__bar-chart__item__bar bg-light-blue"
                  style="width: 6%;"
                />
              </div>
              <div
                class="chart__bar-chart__item"
                data-share="5.290296579028472"
              >
                <div
                  class="chart__bar-chart__item__label dark-grey text--overflow-ellipsis margin-right-8"
                >
                  Bahamas
                </div>
                <div
                  class="chart__bar-chart__item__value"
                >
                  5.3%
                </div>
                <div
                  class="chart__bar-chart__item__bar bg-light-blue"
                  style="width: 5%;"
                />
              </div>
              <div
                class="chart__bar-chart__item"
                data-share="4.305255920912259"
              >
                <div
                  class="chart__bar-chart__item__label dark-grey text--overflow-ellipsis margin-right-8"
                >
                  Jersey
                </div>
                <div
                  class="chart__bar-chart__item__value"
                >
                  4.3%
                </div>
                <div
                  class="chart__bar-chart__item__bar bg-light-blue"
                  style="width: 4%;"
                />
              </div>
              <div
                class="chart__bar-chart__item"
                data-share="4.295772978355183"
              >
                <div
                  class="chart__bar-chart__item__label dark-grey text--overflow-ellipsis margin-right-8"
                >
                  Burundi
                </div>
                <div
                  class="chart__bar-chart__item__value"
                >
                  4.3%
                </div>
                <div
                  class="chart__bar-chart__item__bar bg-light-blue"
                  style="width: 4%;"
                />
              </div>
              <div
                class="chart__bar-chart__item"
                data-share="4.174865460752471"
              >
                <div
                  class="chart__bar-chart__item__label dark-grey text--overflow-ellipsis margin-right-8"
                >
                  Isle of Man
                </div>
                <div
                  class="chart__bar-chart__item__value"
                >
                  4.2%
                </div>
                <div
                  class="chart__bar-chart__item__bar bg-light-blue"
                  style="width: 4%;"
                />
              </div>
              <div
                class="chart__bar-chart__item"
                data-share="3.925938218629241"
              >
                <div
                  class="chart__bar-chart__item__label dark-grey text--overflow-ellipsis margin-right-8"
                >
                  Marshall Islands
                </div>
                <div
                  class="chart__bar-chart__item__value"
                >
                  3.9%
                </div>
                <div
                  class="chart__bar-chart__item__bar bg-light-blue"
                  style="width: 4%;"
                />
              </div>
              <div
                class="chart__bar-chart__item"
                data-share="3.2135321590289463"
              >
                <div
                  class="chart__bar-chart__item__label dark-grey text--overflow-ellipsis margin-right-8"
                >
                  Fiji
                </div>
                <div
                  class="chart__bar-chart__item__value"
                >
                  3.2%
                </div>
                <div
                  class="chart__bar-chart__item__bar bg-light-blue"
                  style="width: 3%;"
                />
              </div>
              <div
                class="chart__bar-chart__item"
                data-share="4.387046300467035"
              >
                <div
                  class="chart__bar-chart__item__label dark-grey text--overflow-ellipsis margin-right-8"
                >
                  Other
                </div>
                <div
                  class="chart__bar-chart__item__value"
                >
                  4.4%
                </div>
                <div
                  class="chart__bar-chart__item__bar bg-light-blue"
                  style="width: 4%;"
                />
              </div>
            </div>
          </figure>
        </div>
        <div
          class="chart__bar-chart__item"
        >
          <div
            class="chart__bar-chart__item__label dark-grey text--overflow-ellipsis margin-right-8"
          >
            United States & Territories
          </div>
          <div
            class="chart__bar-chart__item__value"
          >
            6.5%
          </div>
          <div
            class="chart__bar-chart__item__bar bg-light-blue"
            style="width: 6%;"
          />
          <figure
            class="chart__bar-chart__nested"
            id="chart_us_and_territories"
          >
            <div
              class="data chart__bar-chart text--capitalize margin-top-4"
            >
              <div
                class="chart__bar-chart__item"
                data-share="4.750954221094806"
              >
                <div
                  class="chart__bar-chart__item__label dark-grey text--overflow-ellipsis margin-right-8"
                >
                  American Samoa
                </div>
                <div
                  class="chart__bar-chart__item__value"
                >
                  4.8%
                </div>
                <div
                  class="chart__bar-chart__item__bar bg-light-blue"
                  style="width: 5%;"
                />
              </div>
              <div
                class="chart__bar-chart__item"
                data-share="1.7140418671913893"
              >
                <div
                  class="chart__bar-chart__item__label dark-grey text--overflow-ellipsis margin-right-8"
                >
                  United States
                </div>
                <div
                  class="chart__bar-chart__item__value"
                >
                  1.7%
                </div>
                <div
                  class="chart__bar-chart__item__bar bg-light-blue"
                  style="width: 2%;"
                />
              </div>
            </div>
          </figure>
        </div>
      </div>
    </figure>
  </div>
</DocumentFragment>
`;

exports[`TopCountriesRealtime when data is not loaded renders a component in loading state 1`] = `
<DocumentFragment>
  <div>
    <div
      class="chart__title padding-top-2 desktop:padding-top-0"
    >
      <a
        href="/definitions#dimension_country"
      >
        Countries
      </a>
    </div>
    <figure
      id="chart_us"
    >
      <div
        class="data chart__bar-chart text--capitalize margin-top-4"
      />
    </figure>
    <figure
      class="hide chart__bar-chart__nested"
      id="chart_us_and_territories"
    >
      <div
        class="data chart__bar-chart text--capitalize margin-top-4"
      />
    </figure>
    <figure
      class="hide chart__bar-chart__nested"
      id="chart_countries"
    >
      <div
        class="data chart__bar-chart text--capitalize margin-top-4"
      />
    </figure>
  </div>
</DocumentFragment>
`;

exports[`TopCountriesRealtime when data loading has an error renders a component in error state 1`] = `
<DocumentFragment>
  <div>
    <div
      class="chart__title padding-top-2 desktop:padding-top-0"
    >
      <a
        href="/definitions#dimension_country"
      >
        Countries
      </a>
    </div>
    <figure
      id="chart_us"
    >
      <div
        class="data chart__bar-chart text--capitalize margin-top-4"
      />
    </figure>
    <figure
      class="hide chart__bar-chart__nested"
      id="chart_us_and_territories"
    >
      <div
        class="data chart__bar-chart text--capitalize margin-top-4"
      />
    </figure>
    <figure
      class="hide chart__bar-chart__nested"
      id="chart_countries"
    >
      <div
        class="data chart__bar-chart text--capitalize margin-top-4"
      />
    </figure>
  </div>
</DocumentFragment>
`;
